deployment/api-gateway-ingress.yaml
# ingress to expose the application
#  Ingress resource that exposes the notification service to external traffic. 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapi.local
    http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-s-service
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-s-service
            port:
              number: 80
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-s-service
            port:
              number: 80
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-s-service
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-s-service
            port:
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-s-service
            port:
              number: 80
